Cambio de background color

--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
                     <h1>Cecilia Yuriko Kuniyoshi</h1>
 
                     <h3>
-                        Soy <span>Analista de Control de Calidad (QA)</span> con más de 4 años de experiencia en el
-                        área, enfocada más en la
-                        parte de
-                        desarrollo, tengo muchos talentos, también puedo colaborar <span>Analista
-                            funcional/técnico</span>,<span> Scrum Master</span>, <span>QA Automation,</span> coloborar
+                        Soy <span>Analista de Control de Calidad (QA)</span> con más de 4 años de experiencia con
+                        conocimientos en desarrollo, tengo muchos talentos, puedo colaborar como <span>Analista
+                            funcional/técnico</span>,<span> Scrum Master</span>, <span>QA Automation,</span> contribuir
                         con la parte de <span>auditoría</span> del área de IT ya que me gusta documentar y conozco los
                         procedimientos del área o bien, <span> Jira Administrator.</span>
                     </h3>
@@ -156,7 +154,6 @@
 
                         <p>
                             Cecilia Yuriko Kuniyoshi <br>
-                            Capital Federal<br>
                             Buenos Aires, Argentina<br>
                             <a href="tel:+54 9 1158031284">+54 9 1158031284</a> <br>
                             <a href="mailto:#0">ceci.kuniyoshi@gmail.com</a>
@@ -240,7 +237,7 @@
                         compañera, pero finalmente asumí la responsabilidad del proyecto en solitario. Mi labor
                         consistía en realizar pruebas tanto en la aplicación web como en la aplicación móvil. Para la
                         gestión de los casos de prueba, utilizamos Zephyr en Jira. Adquirí experiencia en el
-                        manejo de las herramientas propias de Techinsys, un producto enlatado utilizado en el proyecto.
+                        manejo de las herramientas propias de Technisys, un producto enlatado utilizado en el proyecto.
 
                         Posteriormente, me incorporé al proyecto HSBC Argentina, donde también trabajé de manera
                         independiente. En este proyecto, se desarrolló el homebanking desde cero, por lo que tuve la
@@ -261,7 +258,7 @@
                     </div>
 
                     <p>
-                        Durante mi experiencia, me enfrenté a la prueba de múltiples aplicaciones simultáneamente, tanto
+                        Durante mi experiencia, tuve el desafío de realizar pruebas de múltiples aplicaciones simultáneamente, tanto
                         en entornos web como móviles. Fue en este período cuando realicé mi primera automatización
                         utilizando Robot Framework y Selenium, los cuales encontré muy amigables y fáciles de entender.
 
@@ -322,8 +319,7 @@
                         mis responsabilidades en el testing, también me encargaba de crear y mantener los manuales de
                         las aplicaciones, así como de brindar soporte por correo electrónico a los clientes sin abono
                     </p>
-
-                </div> <!-- end resume-block -->
+                 </div> <!-- end resume-block -->
 
             </div>
         </div> <!-- s-resume__section -->
@@ -332,7 +328,7 @@
 
     <!-- education
     ================================================== -->
-    <section id="education" class="s-resume target-section">
+    <section id="education" class="s-resume target-section grey-section">
         <div class="row s-resume__section">
             <div class="column large-3 tab-12">
                 <h3 class="section-header-allcaps">Educación</h3>
@@ -340,7 +336,7 @@
             <div class="column large-9 tab-12">
                 <div class="resume-block">
                     <div class="resume-block__header">
-                        <h4 class="h3">Técnico en Administración de Sistemas</h4>
+                        <h4 class="h3">Técnicatura en Administración de Sistemas</h4>
                         <p class="resume-block__header-meta">
                             <span>Instituto Privado de la Cámara Argentina de Comercio</span>
                             <span class="resume-block__header-date">
@@ -350,13 +346,13 @@
                     </div>
                     <p>
                         Carrera orientada a administrar un área de sistemas en una empresa, de programación tenía poco y
-                        nada. Al tercer año abandoné por falta de tiempo y motivación para estudiar.
+                        nada. Por exigencias laborales no pude finalizar la carrera.
                     </p>
                 </div> <!-- end resume-block -->
 
                 <div class="resume-block">
                     <div class="resume-block__header">
-                        <h4 class="h3">Técnico en Administración Hotelera</h4>
+                        <h4 class="h3">Técnicatura en Administración Hotelera</h4>
                         <p class="resume-block__header-meta">
                             <span>Centro de estudios a Nivel Terciario N°1</span>
                             <span class="resume-block__header-date">
@@ -367,6 +363,7 @@
                     <p>
                         Carrera para administrar todo tipo de hospedaje.
                     </p>
+  
                 </div> <!-- end resume-block -->
     </section> <!-- end s-resume -->
 
@@ -410,7 +407,7 @@
 
     <!-- skills
     ================================================== -->
-    <section id="skills" class="s-resume target-section">
+    <section id="skills" class="s-resume target-section grey-section">
         <div class="row s-resume__section">
             <div class="column large-3 tab-12">
                 <h3 class="section-header-allcaps">Conocimientos</h3>
@@ -696,7 +693,7 @@
 
     <!-- hobbies
     ================================================== -->
-    <section id="hobbies" class="s-resume target-section">
+    <section id="hobbies" class="s-resume target-section grey-section">
         <div class="row s-resume__section">
             <div class="column large-3 tab-12">
                 <h3 class="section-header-allcaps">Hobbies</h3>
@@ -714,9 +711,11 @@
                         Y algo muy importante, me gustan los Simpsons hasta la temporada 11.
                         <br><br>
                         Listas de Spotify: <a
-                            href="https://open.spotify.com/playlist/0WMdc8YENLZ2vNyHtk5wAZ?si=809283272ed84a80" target="_blank">Kuni</a>
+                            href="https://open.spotify.com/playlist/0WMdc8YENLZ2vNyHtk5wAZ?si=809283272ed84a80"
+                            target="_blank">Kuni</a>
                         y
-                        <a href="https://open.spotify.com/playlist/1KprJ0UMrZp192ymERgLPM?si=9ad7412b20f445db" target="_blank">Nihon</a>
+                        <a href="https://open.spotify.com/playlist/1KprJ0UMrZp192ymERgLPM?si=9ad7412b20f445db"
+                            target="_blank">Nihon</a>
                         <br><br>
 
                     </p>
@@ -751,7 +750,7 @@
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-
+                <span>Las marcas, logos y nombres comerciales mencionados pertenecen a sus respectivos propietarios.</span> 
             </div>
         </div>
 
