--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <h1>Cecilia Yuriko Kuniyoshi</h1>
 
                     <h3>
-                        Soy <span>Analista de Control de Calidad (QA)</span> con más de 4 años de experiencia con
-                        conocimientos en desarrollo, tengo muchos talentos, puedo colaborar como <span>Analista
+                        Soy <span>Analista de Control de Calidad (QA)</span> con más de 4 años de experiencia y
+                        conocimientos en desarrollo. Tengo muchos talentos, puedo colaborar como <span>Analista
                             funcional/técnico</span>,<span> Scrum Master</span>, <span>QA Automation,</span> contribuir
                         con la parte de <span>auditoría</span> del área de IT ya que me gusta documentar y conozco los
                         procedimientos del área o bien, <span> Jira Administrator.</span>
