--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <p>
                             Cecilia Yuriko Kuniyoshi <br>
                             Buenos Aires, Argentina<br>
-                            <a href="mailto:#0">ceci.kuniyoshi@gmail.com</a>
+                            <a href="mailto:#0">cecilia.kuniyoshi@gmail.com</a>
                         </p>
 
                     </div>
