Add APIS project

--- a/index.html
+++ b/index.html
@@ -529,6 +529,13 @@
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
+                <a href="#modal-08" class="folio-item__thumb">
+                    <img src="images/portfolio/apis.jpg" srcset="images/portfolio/apis.jpg 1x, 
+                                 images/portfolio/apis.jpg 2x" alt="apis">
+                </a>
+            </div> <!-- end folio-item -->
+
+            <div class="column folio-item">
                 <a href="#modal-05" class="folio-item__thumb">
                     <img src="images/portfolio/illustrator.jpg" srcset="images/portfolio/illustrator.jpg 1x, 
                                  images/portfolio/illustrator.jpg 2x" alt="illustrator">
@@ -549,12 +556,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
-                <a href="#modal-08" class="folio-item__thumb">
-                    <img src="images/portfolio/apis.jpg" srcset="images/portfolio/apis.jpg 1x, 
-                                 images/portfolio/apis.jpg 2x" alt="apis">
-                </a>
-            </div> <!-- end folio-item -->
+  
 
         </div> <!-- end folio-list -->
 
@@ -619,6 +621,20 @@
             </div>
         </div> <!-- end modal -->
 
+        <div id="modal-08" hidden>
+            <div class="modal-popup">
+                <img src="images/portfolio/gallery/g-apis.jpg" alt="" />
+
+                <div class="modal-popup__desc">
+                    <h5>APIS automatizadas</h5>
+                    <p>Automatización de APIS con Postman</p>
+                </div>
+
+                <a href="https://github.com/CeciKuni/Demo-Postman-Restful-Booker" class="modal-popup__details"
+                target="_blank">Link al proyecto</a>
+            </div>
+        </div> <!-- end modal -->
+
         <div id="modal-05" hidden>
             <div class="modal-popup">
 
@@ -670,22 +686,7 @@
             </div>
         </div> <!-- end modal -->
 
-        <div id="modal-08" hidden>
-            <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-apis.jpg" alt="" />
-
-                <div class="modal-popup__desc">
-                    <h5>APIS automatizadas</h5>
-                    <p>Automatización de APIS con Python y Cypress.</p>
-                    <ul>
-                        <li><span>En contrucción...</span></li>
-
-                    </ul>
-                </div>
-
-                <a href="" class="modal-popup__details"></a>
-            </div>
-        </div> <!-- end modal -->
+    
 
 
     </section> <!-- end s-portfolio -->
