--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
                     </div>
 
                     <p>
-                        Durante mi experiencia, tuve el desafío de realizar pruebas de múltiples aplicaciones simultáneamente, tanto
+                        Durante mi experiencia, tuve el desafío de realizar pruebas de múltiples aplicaciones
+                        simultáneamente, tanto
                         en entornos web como móviles. Fue en este período cuando realicé mi primera automatización
                         utilizando Robot Framework y Selenium, los cuales encontré muy amigables y fáciles de entender.
 
@@ -318,7 +319,7 @@
                         mis responsabilidades en el testing, también me encargaba de crear y mantener los manuales de
                         las aplicaciones, así como de brindar soporte por correo electrónico a los clientes sin abono
                     </p>
-                 </div> <!-- end resume-block -->
+                </div> <!-- end resume-block -->
 
             </div>
         </div> <!-- s-resume__section -->
@@ -362,7 +363,7 @@
                     <p>
                         Carrera para administrar todo tipo de hospedaje.
                     </p>
-  
+
                 </div> <!-- end resume-block -->
     </section> <!-- end s-resume -->
 
@@ -536,18 +537,19 @@
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
+                <a href="#modal-06" class="folio-item__thumb">
+                    <img src="images/portfolio/apis_python.jpg" srcset="images/portfolio/apis_python.jpg 1x, 
+                                 images/portfolio/apis_python.jpg 2x" alt="apis_python">
+                </a>
+            </div> <!-- end folio-item -->
+
+            <div class="column folio-item">
                 <a href="#modal-05" class="folio-item__thumb">
                     <img src="images/portfolio/illustrator.jpg" srcset="images/portfolio/illustrator.jpg 1x, 
                                  images/portfolio/illustrator.jpg 2x" alt="illustrator">
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
-                <a href="#modal-06" class="folio-item__thumb">
-                    <img src="images/portfolio/jira.jpg" srcset="images/portfolio/jira.jpg 1x, 
-                                 images/portfolio/jira.jpg 2x" alt="jira">
-                </a>
-            </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-07" class="folio-item__thumb">
@@ -556,7 +558,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-  
+
 
         </div> <!-- end folio-list -->
 
@@ -631,8 +633,10 @@
                 </div>
 
                 <a href="https://github.com/CeciKuni/Demo-Postman-Restful-Booker" class="modal-popup__details"
-                target="_blank">Link al proyecto</a>
+                    target="_blank">Link al proyecto</a>
             </div>
+
+        </div>
         </div> <!-- end modal -->
 
         <div id="modal-05" hidden>
@@ -653,19 +657,15 @@
 
         <div id="modal-06" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-jira.jpg" alt="" />
+                <img src="images/portfolio/gallery/g-python.jpg" alt="" />
 
                 <div class="modal-popup__desc">
-                    <h5>Jira Administrator.</h5>
-                    <p>Cómo implementar Jira y scrum en una empresa de desarrollo de software, guía y modelos de flujos
-                        de trabajo para usar con Jira Administrator.</p>
-                    <ul>
-                        <li><span>En contrucción...</span></li>
-
-                    </ul>
+                    <h5>APIS con Python</h5>
+                    <p>Ejemplo de un smoke test con la librería requests de Python.</p>
                 </div>
 
-                <a href="" class="modal-popup__details"></a>
+                <a href="https://github.com/CeciKuni/Restful-Booker-Python" class="modal-popup__details"
+                    target="_blank">Link al proyecto</a>
             </div>
         </div> <!-- end modal -->
 
@@ -686,7 +686,7 @@
             </div>
         </div> <!-- end modal -->
 
-    
+
 
 
     </section> <!-- end s-portfolio -->
@@ -750,7 +750,8 @@
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>Las marcas, logos y nombres comerciales mencionados pertenecen a sus respectivos propietarios.</span> 
+                <span>Las marcas, logos y nombres comerciales mencionados pertenecen a sus respectivos
+                    propietarios.</span>
             </div>
         </div>
 
