--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                     <h1>Cecilia Yuriko Kuniyoshi</h1>
 
                     <h3 id="lgAboutMe">
-                        Soy Analista de Control de Calidad (QA) con más de 4 años de experiencia y
-                        conocimientos en desarrollo. Tengo muchos talentos, puedo colaborar como Analista
-                        funcional/técnico, Scrum Master, QA Automation, contribuir
-                        con la parte de auditoría del área de IT ya que me gusta documentar y conozco los
-                        procedimientos del área o bien, Jira Administrator.
+                        Soy Analista de Control de Calidad (QA) manual con 10 años de experiencia y 3 años como QA
+                        Automation
+                        con conocimientos en desarrollo. Tengo muchos talentos, puedo colaborar como Analista
+                        funcional/técnico, Scrum Master, contribuir
+                        con la parte de auditoría del área de IT ya que me gusta documentar y conozco muy bien los
+                        procedimientos
+                        del área.
                     </h3>
 
                     <div class="s-hero__content-social">
@@ -148,7 +150,7 @@
                     Argentina cuando eran pequeños. Desde muy joven, me he considerado una persona proactiva, con un
                     fuerte
                     impulso de investigación y aprendizaje autodidacta. Siempre busco ampliar mis conocimientos y
-                    habilidades, incluso en áreas en las que no soy experta. <br><br>
+                    habilidades, incluso en áreas en las que no soy experta. <br>
                 </p>
                 <p id="lgAboutMeTwo">
                     Me destaco por mi habilidad para comunicarme efectivamente con mi entorno de trabajo y por mi
@@ -156,7 +158,7 @@
                     de ayudar en cualquier tarea, incluso si no está dentro de mi área de especialización. Además,
                     siento
                     una constante necesidad de mejorar los procesos, tanto a nivel individual como para beneficio de la
-                    empresa en su conjunto. <br><br></p>
+                    empresa en su conjunto. <br></p>
                 <p id="lgAboutMeThree">
                     Comencé mi carrera laboral a los 18 años en el sector de la hotelería, pero pronto descubrí mi
                     pasión
@@ -178,7 +180,7 @@
 
                     </div>
                     <div class="column w-1000-stack">
-                        <a id="lgDownloadButton" href="./data/CV - Cecilia Kuniyoshi - 2023.pdf" target="_blank"
+                        <a id="lgDownloadButton" href="./data/CV - Cecilia Kuniyoshi - 2024.pdf" target="_blank"
                             class="btn btn--download">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:-ms-filter">
@@ -206,6 +208,31 @@
                 <h3 id="lgJobs" class="section-header-allcaps">Trabajos</h3>
             </div>
             <div class="column large-9 tab-12">
+                <div class="resume-block">
+
+                    <div class="resume-block__header">
+                        <h4 class="h3">Infotema</h4>
+                        <p class="resume-block__header-meta">
+                            <span id="lgJobTitleOne">QA Manual y Automation</span>
+                            <span id="lgMonthsRangeSix" class="resume-block__header-date">
+                                Septiembre 2023 - Actualidad
+                            </span>
+                        </p>
+                    </div>
+
+                    <p id="lgInfotemaJob">
+                        Formo parte del equipo de Perfilamiento Crediticio del Banco Supervielle, como QA manual pero
+                        mayoritariamente con Automatización
+                        de APIS (proyecto 100% backend). Utilizo Java con TestNG y Rest Assured para automatizar y
+                        realizar validaciones complejas.
+
+                        Con este proyecto me di cuenta que me gusta más automatizar y testear la parte de backend, aún así, cuento con conocimientos
+                        de frameworks para automatizar frontend como ser Playwright (el que utilizan en el banco).
+
+                        El equipo cuenta con 4 proyectos, los cuales ya tengo automatizados 3 de ellos.
+                    </p>
+
+                </div> <!-- end resume-block -->
                 <div class="resume-block">
 
                     <div class="resume-block__header">
@@ -448,14 +475,18 @@
                     <div class="row">
                         <div class="column large-6 tab-12">
                             <ul>
-                                <li id="lgAutomation"><strong>Automatización</strong>
+                                <li>
+                                <strong id="lgAutomation">Automatización</strong>
                                     <ul>
                                         <li>Cypress.</li>
+                                        <li>Playwright.</li>
+                                        <li>TestNG.</li>
                                         <li id="lgPythonPytestSelenium">Python con Selenium y Pytest.</li>
                                         <li id="lgRobotFramework">Robot Framework con Selenium.</li>
                                     </ul>
                                 </li>
-                                <li id="lgDataBases"><strong>Base de datos</strong>
+                                <li>
+                                <strong id="lgDataBases">Base de datos</strong>
                                     <ul>
                                         <li>MySql.</li>
                                         <li>MariaDB.</li>
@@ -517,7 +548,7 @@
 
         <div class="row s-portfolio__header">
             <div class="column large-12">
-                <h3 id="lgSomeProjects">Algunos de mis proyectos/ideas</h3>
+                <h3 id="lgSomeProjects">Algunos de mis proyectos/ideas (próximamente proyectos con Java y Playwright)</h3>
             </div>
         </div>
 
