--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                     <h1>Cecilia Yuriko Kuniyoshi</h1>
 
                     <h3 id="lgAboutMe">
-                        Soy Analista de Control de Calidad (QA) manual con 10 años de experiencia y 3 años como QA
-                        Automation
+                        Soy Analista de Control de Calidad (QA) Manual/Automation con 7 años de experiencia
                         con conocimientos en desarrollo. Tengo muchos talentos, puedo colaborar como Analista
                         funcional/técnico, Scrum Master, contribuir
                         con la parte de auditoría del área de IT ya que me gusta documentar y conozco muy bien los
