--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
-                        <h4 class="h3">Infotema</h4>
+                        <h4 class="h3">Infotema S.A.</h4>
                         <p class="resume-block__header-meta">
                             <span id="lgJobTitleOne">QA Manual y Automation</span>
                             <span id="lgMonthsRangeSix" class="resume-block__header-date">
